--- a/ucp_pkw.css
+++ b/ucp_pkw.css
@@ -1,5 +1,6 @@
 .hero-banner {
-    background-image: image-set("home.png");
+    background-image: url("home.png");
+    background-color: aquamarine;
     background-size: cover;
     height: 550px;
     background-position: center;
