--- a/ucp_pkw.css
+++ b/ucp_pkw.css
@@ -4,6 +4,10 @@
     height: 550px;
     background-position: center;
     background-repeat: no-repeat;
+    padding-top: 30px;
+    height: 40%;
+    width: 40%;
+    padding-left: 90px;
 }
 
 #img_home{
